--- a/server_express_mongo_v3/package.json
+++ b/server_express_mongo_v3/package.json
@@ -15,8 +15,12 @@
     "connect-mongo": "^5.1.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "mongoose-paginate-v2": "^1.8.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   }
 }
