--- a/tercera_entrega/.env.example
+++ b/tercera_entrega/.env.example
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URL=mongodb+srv://admin:pabacs0214@cluster0.tqqey9a.mongodb.net/
+MONGO_URL=
 CODE_SECRET=codigoSecreto
 GOOGLE_CLIENT_ID=asdasd
 GOOGLE_CLIENT_SECRET=asdasd
